# brainvisa-installer

./: CMakeLists.txt  README.md  project_info.cmake
cmake/: brainvisa-installer-config.cmake.in
config/: version.py.in
doc/sphinx/: conf.py  download.rst  index.rst
doc/sphinx/_static/: detect.js
python/brainvisa/: __init__.py
python/brainvisa/installer/: LICENSE  __init__.py  apt.conf.in  aptget.py  category.py  component.py  dialog_markforemove.ui  dialog_markforinstall.ui  dialog_properties.ui  license.py  main_window-b.ui  main_window.py  main_window.ui  package.py  package_bv_share.py  project.py  repository.py
python/brainvisa/installer/bvi_utils/: __init__.py  bvi_exception.py  format.py  paths.py  system.py  tools.py  xml_file.py
python/brainvisa/installer/bvi_xml/: __init__.py  configuration.py  ifw_config.py  ifw_package.py  tag_category.py  tag_dependency.py  tag_license.py  tag_repository.py
share/brainvisa/installer/html/: developper.css  developper.html  presentation.css  presentation.html
share/brainvisa/installer/licenses/: License_private-1.0_en_EN.txt  License_proprietary_neurospin-1.0_en_EN.txt
share/brainvisa/installer/scripts/: script_anatomist.js  script_anatomist_free.js  script_axon.js  script_axon.qs  script_bv_env.js  script_bv_env.qs
share/brainvisa/installer/xml/: configuration.xml  ifw_config_example.xml  ifw_package_empty.xml  ifw_package_example.xml
tests/: apt.conf.in  dpkg  makefile  md5sum  run_all_tests  run_quicly_all_tests  test_bv_build_installer.py  test_bvi_utils_bvi_exception.py  test_bvi_utils_format.py  test_bvi_utils_paths.py  test_bvi_utils_system.py  test_bvi_utils_tools.py  test_bvi_utils_tools_win32.py  test_bvi_utils_xml_file.py  test_bvi_xml_configuration.py  test_bvi_xml_configuration_linux32.py  test_bvi_xml_configuration_linux64.py  test_bvi_xml_configuration_osx.py  test_bvi_xml_configuration_win32.py  test_bvi_xml_ifw_config.py  test_bvi_xml_ifw_package.py  test_bvi_xml_tag_category.py  test_bvi_xml_tag_dependency.py  test_bvi_xml_tag_license.py  test_bvi_xml_tag_repository.py  test_category.py  test_component.py  test_license.py  test_package.py  test_project.py  test_repository.py
tests/axon/DEBIAN/: control
tests/in/: configuration.xml  configuration_partial.xml  configuration_rep.xml  configuration_script.xml  ifw_config_example.xml
tests/in/repository/config/: config.xml
tests/soma/DEBIAN/: control
www/: detect.js  dev_guide.html  download.html  index.html  packages.html  styles.css  user_guide.html
